调整组织架构

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -7,6 +7,6 @@
   </head>
   <body class="bg-blue">
     <div id="app" class="pt-4 px-6"></div>
-    <script type="module" src="/src/renderer/main.js"></script>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
