--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>原神抽卡记录导出工具</title>
   </head>
-  <body class="bg-blue">
+  <body>
     <div id="app" class="pt-4 px-6"></div>
     <script type="module" src="/main.js"></script>
   </body>
