--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>原神抽卡记录导出工具</title>
+    <title></title>
   </head>
   <body>
     <div id="app" class="pt-4 px-6"></div>
